--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,19 @@
-// app global css in SCSS form
+.gastos{
+    border-radius: 30px;
+    height: 60px;
+    width: 300px;
+}
+
+@media (max-width: 350px)
+{
+    .gastos {
+        width: 250px;
+    }
+}
+
+@media (max-width: 250px)
+{
+    .gastos {
+        width: 200px;
+    }
+}
